Melhora na performance e build image docker